[package]
edition = "2021"
description = "Experiment with computing 2D shading, lighting and shadows with Bevy Engine"
homepage = "https://github.com/zaycev/bevy-magic-light-2d"
repository = "https://github.com/LeviLovie/bevy-magic-light-2d"
authors = ["Vladimir Zaytsev"]
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
name = "bevy_magic_light_2d"
version = "0.7.0"

[features]
default = ["egui"]
egui = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_pbr",
] }
bevy-inspector-egui = { version = "0.23.0", optional = true }
log = "0.4.20"
rand = "0.8.5"

[dev-dependencies]
bevy = "0.13"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 0
debug = true
incremental = true
